@@ -80,7 +80,7 @@ class CharUnit implements Serializable {
  * pattern operators).  For a Reader or InputStream, this means an
  * offset from the current read position, so subsequent calls with the
  * same index argument on a Reader or an InputStream will not
- * necessarily be accessing the same position on the stream, whereas
+ * necessarily access the same position on the stream, whereas
  * repeated searches at a given index in a fixed string will return
  * consistent results.
  *
@@ -93,12 +93,12 @@ class CharUnit implements Serializable {
  * thread-safe manner.
  *
  * @author <A HREF="mailto:wes@cacas.org">Wes Biggs</A>
- * @version 1.1.3, 18 June 2001 
+ * @version 1.1.4-dev, to be released
  */
 
-public final class RE extends REToken {
+public class RE extends REToken {
   // This String will be returned by getVersion()
-  private static final String s_version = "1.1.3";
+  private static final String VERSION = "1.1.4-dev";
 
   // The localized strings are kept in a separate file
   private static ResourceBundle messages = PropertyResourceBundle.getBundle("gnu/regexp/MessagesBundle", Locale.getDefault());
@@ -196,7 +196,7 @@ public final class RE extends REToken {
 
   /** Returns a string representing the version of the gnu.regexp package. */
   public static final String version() {
-    return s_version;
+    return VERSION;
   }
 
   // Retrieves a message from the ResourceBundle
@@ -259,10 +259,17 @@ public final class RE extends REToken {
     addToken(new RETokenEndSub(subIndex));
   }
 
-  // Actual constructor implementation
   private RE(Object patternObj, int cflags, RESyntax syntax, int myIndex, int nextSub) throws REException {
     super(myIndex); // Subexpression index of this token.
-    char[] pattern;
+    initialize(patternObj, cflags, syntax, myIndex, nextSub);
+  }
+
+    // For use by subclasses
+    protected RE() { super(0); }
+
+    // The meat of construction
+  protected void initialize(Object patternObj, int cflags, RESyntax syntax, int myIndex, int nextSub) throws REException {
+      char[] pattern;
     if (patternObj instanceof String) {
       pattern = ((String) patternObj).toCharArray();
     } else if (patternObj instanceof char[]) {
@@ -318,9 +325,9 @@ public final class RE extends REToken {
 	// make everything up to here be a branch. create vector if nec.
 	addToken(currentToken);
 	RE theBranch = new RE(firstToken, lastToken, numSubs, subIndex, minimumLength);
+	minimumLength = 0;
 	if (branches == null) {
 	    branches = new Vector();
-	    minimumLength = 0;
 	}
 	branches.addElement(theBranch);
 	firstToken = lastToken = currentToken = null;
@@ -527,13 +534,14 @@ public final class RE extends REToken {
 	    numSubs++;
 	  }
 
-          if (lookAhead)
-            currentToken = new RETokenLookAhead(String.valueOf(pattern,index,endIndex-index).toCharArray(),cflags,syntax,negativelh);
-          else {
-            int useIndex = pure ? 0 : nextSub + numSubs;
-            currentToken = new RE(String.valueOf(pattern,index,endIndex-index).toCharArray(),cflags,syntax,useIndex,nextSub + numSubs);
-            numSubs += ((RE) currentToken).getNumSubs();
-          }
+	  int useIndex = (pure || lookAhead) ? 0 : nextSub + numSubs;
+	  currentToken = new RE(String.valueOf(pattern,index,endIndex-index).toCharArray(),cflags,syntax,useIndex,nextSub + numSubs);
+	  numSubs += ((RE) currentToken).getNumSubs();
+
+          if (lookAhead) {
+	      currentToken = new RETokenLookAhead(currentToken,negativelh);
+	  }
+
 	  index = nextIndex;
 	} // not a comment
       } // subexpression
@@ -784,8 +792,7 @@ public final class RE extends REToken {
   }
 
   /**
-   * Checks if the input in its entirety is an exact match of
-   * this regular expression.
+   * Checks if the regular expression matches the input in its entirety.
    *
    * @param input The input text.
    */
@@ -944,6 +951,7 @@ public final class RE extends REToken {
    * null is returned.
    *
    * @param input The input text.
+   * @return An REMatch instance referencing the match, or null if none.
    */
   public REMatch getMatch(Object input) {
     return getMatch(input,0,0);
@@ -956,6 +964,7 @@ public final class RE extends REToken {
    *
    * @param input The input text.
    * @param index The offset within the text to begin looking for a match.
+   * @return An REMatch instance referencing the match, or null if none.
    */
   public REMatch getMatch(Object input, int index) {
     return getMatch(input,index,0);
@@ -969,33 +978,34 @@ public final class RE extends REToken {
    * @param input The input text.
    * @param index The offset index at which the search should be begin.
    * @param eflags The logical OR of any execution flags above.
+   * @return An REMatch instance referencing the match, or null if none.
    */
   public REMatch getMatch(Object input, int index, int eflags) {
     return getMatch(input,index,eflags,null);
   }
 
   /**
-   * Returns the first match found in the input, beginning
-   * the search at the specified index, and using the specified
-   * execution flags.  If no match is found, returns null.  If a StringBuffer
-   * is provided and is non-null, the contents of the input text from the index to the
-   * beginning of the match (or to the end of the input, if there is no match)
-   * are appended to the StringBuffer.
+   * Returns the first match found in the input, beginning the search
+   * at the specified index, and using the specified execution flags.
+   * If no match is found, returns null.  If a StringBuffer is
+   * provided and is non-null, the contents of the input text from the
+   * index to the beginning of the match (or to the end of the input,
+   * if there is no match) are appended to the StringBuffer.
    *
    * @param input The input text.
    * @param index The offset index at which the search should be begin.
    * @param eflags The logical OR of any execution flags above.
    * @param buffer The StringBuffer to save pre-match text in.
-   */
+   * @return An REMatch instance referencing the match, or null if none.  */
   public REMatch getMatch(Object input, int index, int eflags, StringBuffer buffer) {
     return getMatchImpl(makeCharIndexed(input,index),index,eflags,buffer);
   }
 
-  REMatch getMatchImpl(CharIndexed input, int index, int eflags, StringBuffer buffer) {
+  REMatch getMatchImpl(CharIndexed input, int anchor, int eflags, StringBuffer buffer) {
       // Create a new REMatch to hold results
-      REMatch mymatch = new REMatch(numSubs, index, eflags);
+      REMatch mymatch = new REMatch(numSubs, anchor, eflags);
       do {
-	  // Optimization: check if index + minimumLength > length
+	  // Optimization: check if anchor + minimumLength > length
 	  if (minimumLength == 0 || input.charAt(minimumLength-1) != CharIndexed.OUT_OF_BOUNDS) {
 	      if (match(input, mymatch)) {
 		  // Find longest match of them all to observe leftmost longest
@@ -1011,7 +1021,7 @@ public final class RE extends REToken {
 		  return longest;
 	      }
 	  }
-	  mymatch.clear(++index);
+	  mymatch.clear(++anchor);
 	  // Append character to buffer if needed
 	  if (buffer != null && input.charAt(0) != CharIndexed.OUT_OF_BOUNDS) {
 	      buffer.append(input.charAt(0));
@@ -1026,6 +1036,7 @@ public final class RE extends REToken {
    * matches found in the input text.
    *
    * @param input The input text.
+   * @return A non-null REMatchEnumeration instance.
    */
   public REMatchEnumeration getMatchEnumeration(Object input) {
     return getMatchEnumeration(input,0,0);
@@ -1038,6 +1049,8 @@ public final class RE extends REToken {
    *
    * @param input The input text.
    * @param index The offset index at which the search should be begin.
+   * @return A non-null REMatchEnumeration instance, with its input cursor
+   *  set to the index position specified.
    */
   public REMatchEnumeration getMatchEnumeration(Object input, int index) {
     return getMatchEnumeration(input,index,0);
@@ -1050,6 +1063,8 @@ public final class RE extends REToken {
    * @param input The input text.
    * @param index The offset index at which the search should be begin.
    * @param eflags The logical OR of any execution flags above.
+   * @return A non-null REMatchEnumeration instance, with its input cursor
+   *  set to the index position specified.
    */
   public REMatchEnumeration getMatchEnumeration(Object input, int index, int eflags) {
     return new REMatchEnumeration(this,makeCharIndexed(input,index),index,eflags);
@@ -1061,6 +1076,7 @@ public final class RE extends REToken {
    *
    * @param input The input text.
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
+   * @return A String interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substitute(Object input,String replace) {
@@ -1069,11 +1085,15 @@ public final class RE extends REToken {
 
   /**
    * Substitutes the replacement text for the first match found in the input
-   * beginning at the specified index position.
+   * beginning at the specified index position.  Specifying an index
+   * effectively causes the regular expression engine to throw away the
+   * specified number of characters. 
    *
    * @param input The input text.
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
    * @param index The offset index at which the search should be begin.
+   * @return A String containing the substring of the input, starting
+   *   at the index position, and interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substitute(Object input,String replace,int index) {
@@ -1089,6 +1109,8 @@ public final class RE extends REToken {
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
    * @param index The offset index at which the search should be begin.
    * @param eflags The logical OR of any execution flags above.
+   * @return A String containing the substring of the input, starting
+   *   at the index position, and interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substitute(Object input,String replace,int index,int eflags) {
@@ -1115,6 +1137,7 @@ public final class RE extends REToken {
    *
    * @param input The input text.
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
+   * @return A String interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substituteAll(Object input,String replace) {
@@ -1131,6 +1154,8 @@ public final class RE extends REToken {
    * @param input The input text.
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
    * @param index The offset index at which the search should be begin.
+   * @return A String containing the substring of the input, starting
+   *   at the index position, and interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substituteAll(Object input,String replace,int index) {
@@ -1146,6 +1171,8 @@ public final class RE extends REToken {
    * @param replace The replacement text, which may contain $x metacharacters (see REMatch.substituteInto).
    * @param index The offset index at which the search should be begin.
    * @param eflags The logical OR of any execution flags above.
+   * @return A String containing the substring of the input, starting
+   *   at the index position, and interpolating the substituted text.
    * @see REMatch#substituteInto
    */
   public String substituteAll(Object input,String replace,int index,int eflags) {
@@ -1309,7 +1336,7 @@ public final class RE extends REToken {
     else if (input instanceof Reader)
 	return new CharIndexedReader((Reader) input, index);
     else if (input instanceof CharIndexed)
-	return (CharIndexed) input;
+	return (CharIndexed) input; // do we lose index info?
     else 
 	return new CharIndexedString(input.toString(), index);
   }
