@@ -18,18 +18,20 @@
  */
 package gnu.regexp;
 
+/**
+ * @since gnu.regexp 1.1.3
+ * @author Shashank Bapat
+ */
 final class RETokenLookAhead extends REToken
 {
-  RE re;
+  REToken re;
   boolean negative;
 
-
-  RETokenLookAhead(Object pattern, int cflags, RESyntax syntax, boolean negative) throws REException {
+  RETokenLookAhead(REToken re, boolean negative) throws REException {
     super(0);
-    re = new RE(pattern, cflags, syntax);
+    this.re = re;
     this.negative = negative;
   }
-
 
   boolean match(CharIndexed input, REMatch mymatch)
   {
@@ -55,5 +57,12 @@ final class RETokenLookAhead extends REToken
       return false;
     }
   }
+
+    void dump(StringBuffer os) {
+	os.append("(?");
+	os.append(negative ? '!' : '=');
+	re.dumpAll(os);
+	os.append(')');
+    }
 }
 
